# lcu03

./: .gitignore  .gitignore.save  README  zzz.txt
calc/: nominals-calc.wxm  poweroff-lifetime-estimation.wxm
calc/gate-ctrl/: #entire-scheme.sch#  entire-scheme.ckt  entire-scheme.ngspice.tr  entire-scheme.sch  entire-scheme.sch~
common/: funcs.h
controller-em-tests/em-data/: RFExplorer_MultipleSweepData_2016_06_29_11_14_06-panelled-on.csv  RFExplorer_MultipleSweepData_2016_06_29_11_58_33-panelled-off.csv  RFExplorer_MultipleSweepData_2016_06_29_12_29_23-reg-off.csv  RFExplorer_MultipleSweepData_2016_06_29_12_29_23-reg-on.csv  em-tests.R  off-canned.csv  off.csv  off3m.csv  on.csv  on3m-init-no-usb.csv  on3m-init.csv  on3m.csv  peak-tests.R  shielded-on.csv  shielded-on3m-init-no-usb-canned.csv  shielded-on3m-init-no-usb.csv  shielded-on3m-init.csv
controller-em-tests/em-data/comp-bg/: comp-bg.R
controller-em-tests/em-data/grid-improved/: RFExplorer_MultipleSweepData_2016_05_15_19_13_49__far_regular_on.csv  grid-comparison.R  (+23 more)
controller-em-tests/lm317-vs/: fp-lib-table  lm317-vs-cache.lib  lm317-vs.bak  lm317-vs.kicad_pcb  lm317-vs.kicad_pcb-bak  lm317-vs.net  lm317-vs.pro  lm317-vs.sch
devices/01/: comments.txt  desc.txt
devices/02/: desc.txt
devices/03/: comments.txt  desc.txt
devices/04/: desc.txt
docs/NCP1117LPST33T3GOSCT-ND-lin-reg/: link.txt
docs/mpz2012s102atd25-ferrite-bead/: link.txt
electrical/components/: a4985.lib  ad5543.lib  ad7683.lib  ad8610.lib  ad8620.bak  ad8620.lib  adg5204.bak  adg5204.lib  adr4533.lib  adt7410.lib  bat54s.lib  lb1930mc.lib  m24c02.lib  mini-usb-b.lib  my-ncp1117st50t3g.dcm  my-ncp1117st50t3g.lib  ref196.lib  stepper_conn.dcm  stepper_conn.lib  stm32f103cbt6.lib  ts881.lib
electrical/lcu03/: _autosave-lcu03.kicad_pcb  _saved_lcu03.sch  file56676C2D.bak  fp-lib-table  fp-lib-table.win  lcu03-cache.lib  lcu03.bak  lcu03.kicad_pcb  lcu03.kicad_pcb-bak  lcu03.net  lcu03.pro  lcu03.sch  lcuB60C.tmp  lcuE280.tmp  stepper-subcircuit.bak  stepper-subcircuit.sch
electrical/lcu03-hs/: fp-lib-table  lcu03-hs-cache.lib  lcu03-hs.bak  lcu03-hs.dsn  lcu03-hs.kicad_pcb  lcu03-hs.kicad_pcb-bak  lcu03-hs.net  lcu03-hs.pro  lcu03-hs.sch
electrical/lcu03-hs-cable/: lcu03-hs-cable.bak  lcu03-hs-cable.pro
electrical/lcu03-motor-cable/: lcu03-motor-cable.bak  lcu03-motor-cable.sch  lcu92C9.tmp
electrical/lcu03-shutter-cable/: lcu03-shutter-cable.bak  lcu03-shutter-cable.pro  lcu03-shutter-cable.sch  lcuF16.tmp
electrical/lcu03/gerber/: lcu03.drl  (+4 more)
electrical/libs/: a110x.lib
firmware/bootloader/: .cproject  .project  Makefile  halconf.h
firmware/digitizer/: .project  halconf.h
firmware/lcu03/: .cproject  Makefile  chconf.h  halconf.h  mcuconf.h
firmware/lcu03.save/: .cproject  halconf.h  mcuconf.h
firmware/miling.bootloader/: .cproject  .project  Makefile  mcuconf.h
firmware/miling.main/: .cproject  .gitignore  Makefile  chconf.h  debug.sh  debug_ext.sh  halconf.h
firmware/miling.secondary/: .cproject  .project  Makefile  halconf.h
firmware/test-spi/: .cproject  Makefile  main.c
lm317-vs/: lm317-vs.net  lm317-vs.sch
software/: CMakeLists.txt  settings.win32.cmake  version.h.in
software.miling/: .gitignore  CMakeLists.txt
software.miling/.templates/: config-win.cmake
software.miling/tests/: CMakeLists.txt
software.miling/tests/test.motor/: CMakeLists.txt
software.miling/tests/test.motor/src/: main.cpp
software/3dparty/: CMakeLists.txt
software/3dparty/libqtlua-2.0/: CMakeLists.txt
software/3dparty/sip-4.17/: Makefile  sipconfig.py
software/3dparty/sip-4.17/siplib/: Makefile  siplib.c
software/digitizer/: CMakeLists.txt
software/digitizer/src/: calibration_wnd.cpp  calibration_wnd.h  calibration_wnd.ui  digitizer_ice.cpp  digitizer_ice.h  exec.cpp  factory_ice.cpp  factory_ice.h  host_tray.cpp  images.qrc  main.cpp  main_wnd.cpp  main_wnd.h  main_wnd.ui  oscilloscope_wnd.cpp  oscilloscope_wnd.h  oscilloscope_wnd.ui  setup_dlg.cpp  setup_dlg.h  setup_dlg.ui  sweep_wnd.cpp  sweep_wnd.h  sweep_wnd.ui  thread_ice.cpp  thread_ice.h
software/digitizer/src/icee/: digitizer.cpp  digitizer.h  digitizer.ice  factory.cpp  factory_version.h
software/driver/: dpinst.xml  lcu03-driver.inf
software/help/: CMakeLists.txt
software/help/content/: CMakeLists.txt  generate.bat  generate.sh  help.qch  help.qhc  help.qhcp  help.qhp
software/help/content/html/: about_dlg.html  bootstrap.min.css  device_setup.html  hardware_setup.html  main_wnd.html  remote_setup.html
software/help/content/src/: help.qch  help.qhp
software/help/content/src/html/: main_wnd.html
software/help/content/temp/: help.qch  help.qhc
software/help/libhelp/: CMakeLists.txt
software/help/libhelp/src/: help_browser.cpp  help_browser.h  help_main_wnd.cpp  help_main_wnd.h  help_main_wnd.ui  helpbrowser.h  images.qrc
software/help/working_example/: helpbrowser.cpp  helpbrowser.h  mainwindow.cpp  mainwindow.h
software/installer/: installer.iss
software/lcu03/: CMakeLists.txt
software/lcu03/src/: exec.h  factory_ice.cpp  factory_ice.h  host_tray.cpp  host_tray.h  images.qrc  lcu03_ice.cpp  lcu03_ice.h  main.cpp  main_wnd.cpp  main_wnd.h  main_wnd.ui  settings_dlg.cpp  settings_dlg.h  settings_dlg.ui
software/lcu03/src/icee/: factory.h  factory.ice  factory_version.h  lcu03.cpp  lcu03.h  lcu03.ice
software/libextctrl/: CMakeLists.txt
software/libextctrl/src/: digitizer_prx.cpp  digitizer_prx.h  factory_client.cpp  factory_client.h  factory_prx.cpp  factory_prx.h  lcu03_prx.cpp  lcu03_prx.h
software/libio/src/: bipot.cpp  bipot.h  io.cpp  voltamp_io.cpp  voltamp_io.h
software/libluafactory/: CMakeLists.txt
software/libluafactory/lua/: test.lua
software/libluafactory/src/: luadigitizer.cpp  luadigitizer.h  luafactory.cpp  luafactory.h  lualcu03.cpp  lualcu03.h
software/python-binding/: CMakeLists.txt  lcu03.sip
software/python-binding/src/: lcu03.cpp  lcu03.h
software/ser_num_assigner/: CMakeLists.txt
software/ser_num_assigner/src/: main.cpp
software/test/: CMakeLists.txt
software/test/src/: main.cpp
(+153 files in other folders)
